Migrated to Spring Boot 3.5.6